# neschess

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  chrrom.chr
cmake/: Policy.cmake
src/: CMakeLists.txt  bitmath.h  board_renderer.h  chrrom.chr  chrrom.s  core.h  game_screen.cpp  game_screen.h  main.c  main.cpp  metasprite.h  neschess.cpp  neschess.h  physics.c  physics.h  player.c  player.h  screen_fader.h  tileset.h  title_screen.cpp  title_screen.h  types.h
src/chess/: CMakeLists.txt
src/chess/include/chess/: ai.h  bitboard.h  board.h  evaluation.h  move.h  move_generator.h  piece.h  piece_set.h  position.h  side.h  square.h
src/chess/test/: CMakeLists.txt  main.cpp  test_bitboard.h  test_board.h  test_move.h  test_move_generator.h  test_piece.h  test_position.h  test_side.h  test_square.h
src/nes/: 6502_util.s  ines.s  nes.h  nes.s  nes_apu.inc  nes_apu.s  nes_attribute_table.h  nes_input.h  nes_input.inc  nes_input.s  nes_interrupt.inc  nes_interrupt.s  nes_nametable.h  nes_palette.h  nes_ppu.h  nes_ppu.inc  nes_ppu.s  nes_sprite.h  nes_zeropage.inc  nes_zeropage.s  startup.s
src/nes++/: CMakeLists.txt  bitmath.h  nes_interrupt.cpp  nes_palette.h  nes_ppu.cpp  nes_ppu.h  nes_ppu.s  nespp.h  types.cpp  types.h
src/nespp/: CMakeLists.txt
src/nespp/include/nespp/: apu.h  array.h  circular_iterator.h  circular_queue.h  compression.h  container.h  dropout_stack.h  error.h  iterator.h  joypad.h  low_level.h  metasprite.h  metatile.h  nesmath.h  nmi_ppu_buffer.h  palette.h  ppu.h  ppu.inc  reverse_iterator.h  stack.h  types.h  vector.h
src/nespp/src/: CMakeLists.txt  apu.cpp  joypad.cpp  joypad.s  nmi.cpp  nmi.s  nmi_ppu_buffer.cpp  nmi_ppu_buffer.s  ppu.cpp  ppu.s
src/nespp/test/: CMakeLists.txt  main.cpp  test_array.h  test_circular_queue.h  test_dropout_stack.h  test_stack.h  test_types.h  test_vector.h
toolchain/: cc65-toolchain.cmake  cc65.yaml  nes.cfg
